Added user-info API
