# src/openapi.yaml
@@ -215,6 +215,54 @@ components:
         - refreshToken
         - user
 
+    getUserInfoResponseData:
+      title: Schema for Get User Info Response Data
+      type: object
+      properties:
+        id:
+          type: string
+        role:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+          nullable: true
+        username:
+          type: string
+        email:
+          type: string
+        gender:
+          type: string
+          nullable: true
+        dob:
+          type: string
+          nullable: true
+        contactNumber:
+          type: string
+          nullable: true
+        profileImgURI:
+          type: string
+          nullable: true
+        isVerified:
+          type: boolean
+        lastLogin:
+          type: string
+        createdDate:
+          type: string
+        modifiedDate:
+          type: string
+      required:
+        - id
+        - role
+        - firstName
+        - username
+        - email
+        - isVerified
+        - lastLogin
+        - createdDate
+        - modifiedDate
+
     healthCheckSuccessResponse:
       type: object
       properties:
@@ -301,6 +349,29 @@ components:
           type: object
           $ref: '#/components/schemas/loginUserResponseData'
 
+    
+    getUserInfoResponse:
+      type: object
+      properties:
+        statusCode:
+          type: integer
+          example: 200
+        type:
+          type: string
+          example: 'SUCCESS'
+        message:
+          type: string
+          example: 'Success'
+        devMessage:
+          type: string
+          example: 'Success'
+        success:
+          type: boolean
+          example: true
+        data:
+          type: object
+          $ref: '#/components/schemas/getUserInfoResponseData'
+
     badRequestResponse:
       type: object
       properties:
@@ -316,6 +387,26 @@ components:
         devMessage:
           type: string
           example: Bad Request. Required resource does not exist.
+        error:
+          type: array
+        data:
+          type: array
+
+    unauthorizedResponse:
+      type: object
+      properties:
+        statusCode:
+          type: integer
+          example: 401
+        type:
+          type: string
+          example: 'UNAUTHORIZED'
+        message:
+          type: string
+          example: 'Unauthorized'
+        devMessage:
+          type: string
+          example: Unauthorized access. Could not proceed with the request.
         error:
           type: array
         data:
@@ -560,6 +651,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/gone'
+        '500':
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/internalServerErrorResponse'
+
+  /user/{userId}:
+    get:
+      operationId: getUserInfo
+      summary: Get User Info by ID
+      description: An API to retrieve the info about currently loggedin user.
+      parameters:
+        - $ref: '#/components/parameters/UserIdParam'
+      responses:
+        '200':
+          description: SUCCESS
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getUserInfoResponse'
+        '400':
+          description: BAD_REQUEST
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/badRequestResponse'
+        '401':
+          description: UNAUTHORIZED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/unauthorizedResponse'
+        '404':
+          description: NOT_FOUND
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/notFound'
         '500':
           description: INTERNAL_SERVER_ERROR
           content:
